<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello Monkey</string>
    <string name="action_settings">Settings</string>
    <!-- pulltorefreshview下拉刷新，上拉加载更多 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>

    <!-- 下拉刷新，上拉加载更多 -->

    <string name="btn_scroll_view">ScrollView demo</string>
    <string name="btn_list_view">ListView demo</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">正在刷新&#8230;</string>
    <string name="header_hint_refresh_time">时间：</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="login_account">  输入账号</string>
    <string name="login_psd">  输入6-16位登陆密码</string>
    <string name="login_forget_psd">忘记密码？</string>
    <string name="register_account">  输入您的手机号</string>
    <string name="register_check_code"> 输入您收到的验证码</string>
    <string name="register_get_check_code">获取验证码</string>
    <string name="register_privacy">点击注册表示同意隐私条款</string>
    <string name="register">验证并注册</string>
    <string name="find_psd_new"> 输入新的密码</string>
    <string name="find_psd_sure"> 确认密码</string>
    <string name="sure">确认</string>
    <string name="inform_reason">选择举报原因</string>
    <string name="inform_reason_other">其他原因（可选） </string>
    <string name="head_humor_list_title">心情约</string>
    <string name="head_humor_send_title">创建心情</string>
    <string name="head_tags">标签</string>
    <string name="head_login">登录</string>
    <string name="head_inform">举报</string>
    <string name="head_register">注册</string>
    <string name="head_find_psd">找回密码</string>
    <string name="head_dorm_send_title">创建宿舍</string>
    <string name="head_dorm_list_title">奇葩宿舍</string>
    <string name="head_humor_detail_title">心情</string>
    <string name="head_activity_list_title">活动</string>
    <string name="head_topic_list_title">话题</string>
    <string name="head_activity_send_title">创建活动</string>
    <string name="head_activity_send_title_desc">描述</string>
    <string name="head_topic_send_title">创建话题</string>
    <string name="head_create_place">创建位置</string>
    <string name="head_title_message">消息</string>
    <string name="head_title_baoluo">宝落</string>
    <string name="head_title_contacts">联系人</string>
    <string name="head_title_setting_msg">消息设置</string>
    <string name="head_title_setting">设置</string>
    <string name="head_title_topic_theme">#话题主题#</string>
    <string name="head_title_change_pswd">修改密码</string>
    <string name="head_title_function">功能介绍</string>
    <string name="head_title_privacy">隐私条约</string>
    <string name="setting_safety">隐私与安全</string>
    <string name="setting_msg">信息设置</string>
    <string name="setting_change_pswd">修改密码</string>
    <string name="setting_about">关于宝落</string>
    <string name="change_pswd_new">新密码</string>
    <string name="change_pswd_old">旧密码</string>
    <string name="head_title_about">关于宝落</string>
    <string name="head_title_code">二维码扫描</string>
    <string name="head_right_code">相册</string>
    <string name="head_title_attend">我的关注</string>
    <string name="head_title_school_notification">校园推送</string>
    <string name="head_title_mine">个人信息</string>
    <string name="head_title_fri_info_right">更多</string>
    <string name="head_title_grove">小树林</string>
    <string name="user_agree"><u>用户协议</u></string>
    <string name="get_code"><u>无法获取验证码</u></string>
    <string name="add_friend">添加好友</string>
    <string name="user_agreement">        1.地方杰拉德减肥；快的风景啊领导军来将敌发生了打发基督教啊浪费点卡啊福建省电力附近阿斯兰的军阀势力；脚打罗脚打罗绝对是立法精神动力
        啊房间里的伤口附近啊大家啊领导阿斯兰的肌肤阿里斯顿街发生了打发就阿斯兰多夫急啊老师的附近阿斯兰打开速度发大水了</string>

    <!-- record start -->
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <!-- record end -->

    <string name="publish_range">推送范围</string>
    <string name="content">内容</string>
    <string name="title">标题</string>
    <string name="nick_test">极品屌丝</string>
    <string name="edittext_hint_test">测试编辑框字体大小</string>

    <!-- 二维码扫描 -->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="privacy_treaty_content">	1、服务条款的确认和接纳\n
　　本网站及APP的各项内容和服务的所有权归本公司拥有。用户在接受本服务之前，请务必仔细阅读本条款。用户使用服务，或通过完成注册程序，表示用户接受所有服务条款。\n
　　2、用户同意：\n
　　(1) 提供及时、详尽及准确的个人资料。\n
　　(2) 不断更新注册资料、符合及时、详尽、准确的要求。\n
　　如果用户提供的资料不准确，本网站有结束服务的权利。\n
　　本网站及APP将不公开用户的姓名、地址、电子邮箱、帐号和电话号码等信息（请阅隐私保护条款）。\n
　　用户在本网站和APP的任何行为必须遵循：\n
　　(1) 传输资料时必须符合中国有关法规。\n
　　(2) 使用信息服务不作非法用途和不道德行为。\n
　　(3) 不干扰或混乱网络服务。\n
　　(4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。\n
　　3、服务条款的修改\n
　　本网站及APP有权在必要时修改条款，将会在页面公布。\n
　　如果不接受所改动的内容，用户可以主动取消自己的会员资格。如果您不取消自己的会员资格，则视为接受服务条款的变动。\n
　　4、 用户的帐号、密码和安全性\n
　　一旦成功注册成为会员，您将有一个密码和用户名。\n
　　用户将对用户名和密码的安全负全部责任。另外，每个用户都要对以其用户名进行的所有活动和事件负全责。您可以随时改变您的密码。\n
　　用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告本公司。\n
　　5、拒绝提供担保\n
　　用户明确同意使用本公司服务，由用户个人承担风险。\n
　　本网站及APP不担保服务一定满足用户的要求，也不担保服务不会中断，对服务的及时性、安全性、出错发生都不作担保。\n
　　用户理解并接受：任何通过服务取得的信息资料的可靠性有用性取决于用户自己的判断，用户自己承担所有风险和责任。\n
　　6、有限责任\n
　　本网站及APP对任何由于使用服务引发的直接、间接、偶然及继起的损害不负责任。\n
　　这些损害可能来自（包括但不限于）：不正当使用服务，或传送的信息不符合规定等。\n
　　7、对用户信息的存储和限制\n
　　本网站及APP不对用户发布信息的删除或储存失败负责，本公司有判定用户的行为是否符合服务条款的要求和精神的保留权利。如果用户违背了服务条款的规定，有中断对其提供服务的权利。\n
　　8、结束服务\n
　　本网站及APP可随时根据实际情况中断一项或多项服务，不需对任何个人或第三方负责或知会。\n
　　同时用户若反对任何服务条款的建议或对后来的条款修改有异议，或对服务不满，用户可以行使如下权利：\n
　　(1) 不再使用本公司的服务。\n
　　(2) 通知本公司停止对该用户的服务。\n
　　9、信息内容的所有权\n
　　本公司的信息内容包括：文字、软件、声音、相片、录象、图表；以及其它信息，所有这些内容受版权、商标、标签和其它财产所有权法律的保护。\n
　　用户只能在授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。\n
　　10、隐私保护条款\n
　　本网站及APP将严格保守用户的个人隐私，承诺未经过您的同意不将您的个人信息任意披露。\n
　　但在以下情形下，我们将无法再提供您前述保证而披露您的相关信息。这些情形包括但不限于：\n
　　* 为了您的交易顺利完成，我们不得不把您的某些信息，如您的姓名、联系电话、e-mail等提供给相关如物流服务方，以便于他们及时与您取得联系，提供服务。\n
　　* 当您在本网站的行为违反的服务条款，或可能损害他人权益或导致他人遭受损害，只要我们相信披露您的个人资料是为了辨识、联络或采取法律行动所必要的行动时。\n
　　* 法律法规所规定的必须披露或公开的个人信息。\n
　　* 当司法机关或其它有权机关依法执行公务，要求提供特定个人资料时，我们必须给予必要的配合。\n
　　11、适用法律\n
　　上述条款将适用中华人民共和国的法律，所有的争端将诉诸于本网所在地的人民法院。\n
　　如发生服务条款与中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款则依旧保持约束力。</string>
    <string name="topic_praise_num">\t\t%d个赞</string>
    <string name="topic_comment_num">\t\t%d个评论</string>
    <string name="topic_title">#%s#</string>
    <string name="topic_participator">\t%d人参与</string>
    <string name="topic_praise_comment">\t\t%d</string>
    <string name="event_detail">详情</string>
    <string name="event_detail_comment">评论 %d</string>
    <string name="event_detail_people_num">\t人数  %1$d/%2$d</string>
    <string name="event_detail_time">\t\t开始%1$s\t结束%2$s</string>
    <string name="event_detail_location">\t\t\t%s</string>
    <string name="event_send_title_hint">标题  (不超过12个字)</string>
    <string name="event_send_location_hint">位置</string>
    <string name="event_send_time_hint">时间</string>
    <string name="event_send_start">开始时间</string>
    <string name="event_send_end">结束时间</string>
    <string name="event_send_fenge">————</string>
    <string name="event_send_peoplenum_hint">人数</string>
    <string name="event_send_tags_hint">标签</string>
    <string name="event_send_tags_classify_hint">类型标签</string>
    <string name="event_send_tags_def_hint">自定义标签</string>
    <string name="event_send_desc_hint">描述  (不超过300个字)</string>
    <string name="event_send_desc_add_pic">点击添加图片\n第一张为封面</string>
    <string name="event_send_desc_et">输入活动描述</string>
    <string name="mine_month">%d月</string>
    <string name="mine_points">本月总积分为  %d分</string>
    <string name="mine_people_num">参加活动人数  %d</string>
    <string name="mine_event_pic">1/%d</string>
    <string name="mine_event_nopic">0/0</string>

    
</resources>