<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lls="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login" >
	
     <com.baoluo.community.ui.customview.HeadView
        android:id="@+id/hv_find_psd_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/transparent"
        lls:left_icon="@drawable/ic_fanhui_nor"
        lls:title_value="@string/head_find_psd" />
     <RelativeLayout
        android:id="@+id/rl_find_psd_account"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_below="@+id/hv_find_psd_head"
        android:background="@color/transparent" >

        <EditText
            android:id="@+id/et_find_psd_account"
            style="@style/text_humor_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/transparent"
            android:gravity="bottom"
            android:hint="@string/register_account"
            android:inputType="phone" />

        <View
            android:id="@+id/view_fenge_find_psd_account"
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_alignLeft="@+id/et_find_psd_account"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/et_find_psd_account"
            android:background="@color/title_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_find_psd_check_code"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/rl_find_psd_account" >

        <EditText
            android:id="@+id/et_find_psd_check_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:background="@color/transparent"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:hint="@string/register_check_code"
            android:inputType="number"
            style="@style/text_humor_send" />
		<View 
		    android:id="@+id/view_fenge_find_psd_check_code"
            android:layout_width="0.1dip"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="54dp"
            android:layout_height="match_parent"
            android:background="@color/title_color"
            android:layout_toRightOf="@+id/et_find_psd_check_code"
		    />
        <TextView
            android:id="@+id/tv_find_psd_get_check_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/view_fenge_find_psd_check_code"
            android:gravity="bottom"
            android:layout_marginBottom="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/register_get_check_code"
            style="@style/text_humor_send" />
        
         <View
            android:id="@+id/view_fenge_find_psd_check_code_01"
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_alignLeft="@+id/et_find_psd_check_code"
            android:layout_marginRight="24dip"
            android:layout_alignParentBottom="true"
            android:background="@color/title_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_find_psd_psd"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/rl_find_psd_check_code"
        android:background="@color/transparent" >

        <EditText
            android:id="@+id/et_find_psd_psd"
            style="@style/text_humor_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/transparent"
            android:gravity="bottom"
            android:hint="@string/find_psd_new"
            android:inputType="textPassword" />

        <View
            android:id="@+id/view_fenge_find_psd_psd"
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_alignLeft="@+id/et_find_psd_psd"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/et_find_psd_psd"
            android:background="@color/title_color" />
    </RelativeLayout>
    
      <RelativeLayout
        android:id="@+id/rl_find_psd_psd_sure"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/rl_find_psd_psd"
        android:background="@color/transparent" >

        <EditText
            android:id="@+id/et_find_psd_psd_sure"
            style="@style/text_humor_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/transparent"
            android:gravity="bottom"
            android:hint="@string/find_psd_sure"
            android:inputType="textPassword" />

        <View
            android:id="@+id/view_fenge_find_psd_psd_sure"
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_alignLeft="@+id/et_find_psd_psd_sure"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/et_find_psd_psd_sure"
            android:background="@color/title_color" />
    </RelativeLayout>
    <Button
            android:id="@+id/btn_find_psd_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_find_psd_psd_sure"
            android:layout_margin="24dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="16sp" />
    
</RelativeLayout>